--- a/index.html
+++ b/index.html
@@ -19,9 +19,24 @@
 		</div>
 
 		<div>
-
-
-
+			<p class="center">
+			<image src="google.png" alt="The Google logo">	
+			</p>
+		</div>
+		<div>
+			<p class="textbox">
+			<input type="text" size="50">
+		</div>
+		<div>
+			<button type="button" class="buttonleft">Google Search</button>
+			<button type="button" class="buttonright">I'm Feeling Lucky</button>
+		</div>
+		<div class="navbar">
+			<a>Advertising</a>
+			<a>Business</a>
+			<a style="float:right;">Settings</a>
+			<a style="float:right;">Terms</a>
+			<a style="float:right;">Privacy</a>
 		</div>
 	</body>
 </html>
